Table Airport {
    airport_id number
    iata_code varchar
    airport_name varchar
    country varchar
}

Table Airplane {
    airplaneID integer
    airlane_name varchar
    height integer
    lenght integer
    wingspan integer
    weight integer
    max_speed integer
    max_weight integer
    total_seats_eco integer
    total_seats_bus integer
    fuel_capacity integer
    production_year integer

    Indexes {
        (airplaneID) [PK]
    }
}

Table Ticket {
    ticketID integer
    passengerID integer
    flightID integer
    place varchar
    flight_number varchar
    price integer

    Indexes {
        (ticketID) [PK]
    }
}

Table FlightDetails {
    flightID number
    airplaneID number
    departure_time timestamp
    arrival_time timestamp
    departure_code number
    destination_code number
    flight_cost integer
    departure_airport_cost integer
    arriwall_airport_cost integer
    total_free_bus_seats integer
    total_free_eco_seats integer
    workers_cost integer
    distance integer
    Indexes {
        (flightID) [PK]
    }
}

Table Gender {
    id number
    gender_str varchar
}

Table Passenger {
    passengerID number
    gender_id number
    age integer
    weight integer
    id_number varchar

    Indexes {
        (passengerID) [PK]
    }
}

Ref: Ticket.passengerID > Passenger.passengerID
Ref: Ticket.flightID > FlightDetails.flightID
Ref: Airplane.airplaneID < FlightDetails.airplaneID
Ref: Gender.id < Passenger.gender_id
Ref: Airport.airport_id > FlightDetails.departure_code
Ref: Airport.airport_id > FlightDetails.destination_code